--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,9 @@ jobs:
           git config --global user.email "actions@github.com"
           git add system.json
           git commit -m "chore: Update system.json for version ${{ github.ref_name }}"
-          git push
+          # A linha abaixo é a que foi corrigida.
+          # Ela força o push para a branch 'main'.
+          git push origin HEAD:main
 
       - name: Zip the project
         run: |
